CSS modifications to center text and add functionality to the get-name button

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -87,7 +87,21 @@ textarea {
 /* ==========================================================================
    Author's custom styles
    ========================================================================== */
+body {
+    background: azure;
+}
 
+#get-name{
+    text-align: center;
+}
+#rolled-name {
+    color: black;
+    font-family: "A Dark Wedding", fantasy;
+    font-style: inherit;
+    text-align: center;
+    text-shadow: 0 0 2px grey;
+    font-size: x-large;
+}
 
 /* ==========================================================================
    Helper classes
