--- a/src/css/main.css
+++ b/src/css/main.css
@@ -91,13 +91,15 @@ body {
     background: azure;
 }
 
-#get-name{
+#get-name {
     text-align: center;
 }
-#get-name-button{
-    font-size:x-large;
+
+#get-name-button {
+    font-size: x-large;
     font-family: "High Tower Text", serif;
 }
+
 #rolled-name {
     color: black;
     font-family: "High Tower Text", fantasy;
@@ -105,6 +107,10 @@ body {
     text-align: center;
     text-shadow: 0 0 2px grey;
     font-size: xx-large;
+}
+
+#languages {
+    text-align: center;
 }
 
 /* ==========================================================================
