--- a/www/css/style.css
+++ b/www/css/style.css
@@ -101,7 +101,7 @@ body {
 }
 
 #name-banner {
-    background-image: url("banner.svg");
+    background-image: url("../images/banner.svg");
     background-repeat: no-repeat;
     background-position: center;
     padding-bottom: 5%;
